# Trick.Engine.DataConversion

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: parser.rs  runner.rs
src/services/convert/: from_hex.rs  hex.rs  mod.rs  to_hex.rs
