[package]
name = "trick-data"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WIP | framework for data conversion"
repository = "https://github.com/AdamPelc/Trick.Engine.DataConversion"
readme = "README.md"

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
hex = "0.4.3"
